--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -7,8 +7,8 @@
 # (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow,
 # unless explicitly requested using the wintypes option.
 #
-# shadow = false
-shadow = true;
+shadow = false
+# shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
@@ -144,13 +144,13 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 4
+# corner-radius = 4
 
-# Exclude conditions for rounded corners.
-rounded-corners-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'"
-];
+# # Exclude conditions for rounded corners.
+# rounded-corners-exclude = [
+#   "window_type = 'dock'",
+#   "window_type = 'desktop'"
+# ];
 
 
 #################################
@@ -190,27 +190,27 @@ rounded-corners-exclude = [
 #
 # blur-kern = ""
 
-blur-method = "dual_kawase";
-blur-strength = 3;
-blur-background = true;
-blur-background-frame = true;
-blur-background-fixed = true;
+# blur-method = "dual_kawase";
+# blur-strength = 3;
+# blur-background = true;
+# blur-background-frame = true;
+# blur-background-fixed = true;
 
 
-blur-kern = "3x3box";
+# blur-kern = "3x3box";
 
 
-# Exclude conditions for background blur.
-# blur-background-exclude = []
-blur-background-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'",
-  "_GTK_FRAME_EXTENTS@:c",
-  "name = 'Notification'",
-  "class_g = 'Conky'",
-  "class_g ?= 'Notify-osd'",
-  "class_g = 'Cairo-clock'",
-];
+# # Exclude conditions for background blur.
+# # blur-background-exclude = []
+# blur-background-exclude = [
+#   "window_type = 'dock'",
+#   "window_type = 'desktop'",
+#   "_GTK_FRAME_EXTENTS@:c",
+#   "name = 'Notification'",
+#   "class_g = 'Conky'",
+#   "class_g ?= 'Notify-osd'",
+#   "class_g = 'Cairo-clock'",
+# ];
 
 #################################
 #       General Settings        #
@@ -321,7 +321,8 @@ detect-transient = true;
 # The opposing option is use-damage
 #
 # no-use-damage = false
-use-damage = true;
+
+use-damage = false; # To fix artifacts sorry performance
 
 # Use X Sync fence to sync clients' draw calls, to make sure all draw
 # calls are finished before picom starts drawing. Needed on nvidia-drivers
