--- a/.config/espanso/config/exclude_emdash.yml
+++ b/.config/espanso/config/exclude_emdash.yml
@@ -1,3 +1,3 @@
-filter_exec: Telegram|AyuGram|kitty|alacritty|code
+filter_exec: AyuGram|Telegram|kitty|alacritty|code
 extra_excludes:
   - "../match/emdash.yml"
